--- a/src/app/shared/components/slideshow/slideshow.component.html
+++ b/src/app/shared/components/slideshow/slideshow.component.html
@@ -45,7 +45,7 @@
   <ng-container *ngIf="editable">
     <button type="button" class="slide-add"
       mat-button mat-icon-button
-      aria-label="Agregar imagen"
+      aria-label="Add image"
       i18n-aria-label="Label for action button to add a slide/image"
       (click)="onClickAdd()">
       <mat-icon>add_circle_outline</mat-icon>
