--- a/src/app/management/dialogs/data-manager-form-dialog/data-manager-form-dialog.component.html
+++ b/src/app/management/dialogs/data-manager-form-dialog/data-manager-form-dialog.component.html
@@ -17,13 +17,11 @@
 
   <div class="actions">
     <button mat-button mat-raised-button type="button"
-      (click)="onSubmit()"
-      color="primary">
-      Aceptar
-    </button>
+      color="primary"
+      i18n="confirm|Label for action button to accept and proceed"
+      (click)="onSubmit()">Confirm</button>
     <button mat-button mat-raised-button type="button"
-      (click)="onCancel()">
-      Cancelar
-    </button>
+      i18n="cancel|Label for action button to cancel and/or stop an operation"
+      (click)="onCancel()">Cancel</button>
   </div>
 </div>
