--- a/src/app/management/dialogs/products-array/products-array-dialog.component.html
+++ b/src/app/management/dialogs/products-array/products-array-dialog.component.html
@@ -5,16 +5,15 @@
   https://opensource.org/licenses/MIT
 -->
 
-<h2 mat-dialog-title>Agregar Productos</h2>
+<h2 mat-dialog-title i18n="Title of dialog prompt to add products into details of a sell">Add Products</h2>
 <app-centered-mat-spinner *ngIf="loading$ | async">
 </app-centered-mat-spinner>
 
 <div [hidden]="loading$ | async">
   <mat-expansion-panel [expanded]="true">
 
-    <mat-expansion-panel-header>
-      Productos disponibles
-    </mat-expansion-panel-header>
+    <mat-expansion-panel-header
+      i18n="Title of widget displaying available products for addition to details of a sell">Available products</mat-expansion-panel-header>
 
     <app-product-filters-panel (filtersChanges)="onFiltersChange($event)">
     </app-product-filters-panel>
@@ -22,13 +21,15 @@
     <div class="product-table-wrapper">
       <table mat-table [dataSource]="filteredProductsArray$">
         <ng-container matColumnDef="name">
-          <th mat-header-cell *matHeaderCellDef> Nombre </th>
+          <th mat-header-cell *matHeaderCellDef
+            i18n="product name table header|Name of table header for name of product">Name</th>
           <td mat-cell *matCellDef="let product">
             {{ product.name }}
           </td>
         </ng-container>
         <ng-container matColumnDef="price">
-          <th mat-header-cell *matHeaderCellDef> Precio </th>
+          <th mat-header-cell *matHeaderCellDef
+            i18n="product table header|Name of table header for price per product unit">Price</th>
           <td mat-cell *matCellDef="let product">
             ${{ product.price }}
           </td>
@@ -36,13 +37,13 @@
         <ng-container matColumnDef="actions">
           <th mat-header-cell *matHeaderCellDef> </th>
           <td mat-cell *matCellDef="let product">
-            <div class="acciones">
-              <button mat-button mat-icon-button type="button"
-                color="primary"
-                (click)="onClickIncludeProduct(product)">
-                <mat-icon>add</mat-icon>
-              </button>
-            </div>
+            <button mat-button mat-icon-button type="button"
+              color="primary"
+              aria-label="Add this product"
+              i18n-aria-label="Label for action button to mark a product for addition to details of a sell"
+              (click)="onClickIncludeProduct(product)">
+              <mat-icon>add</mat-icon>
+            </button>
           </td>
         </ng-container>
 
@@ -57,19 +58,22 @@
 <mat-card>
 
   <mat-card-header>
-    <mat-card-title>Productos Seleccionados</mat-card-title>
+    <mat-card-title
+      i18n="Title of widget displaying products marked for addition to details of a sell">Selected Products</mat-card-title>
   </mat-card-header>
 
   <mat-card-content class="product-table-wrapper">
     <table mat-table [dataSource]="productsArray$">
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> Nombre </th>
+        <th mat-header-cell *matHeaderCellDef
+          i18n="product name table header|Name of table header for name of product">Name</th>
         <td mat-cell *matCellDef="let product">
           {{ product.name }}
         </td>
       </ng-container>
       <ng-container matColumnDef="price">
-        <th mat-header-cell *matHeaderCellDef> Precio </th>
+        <th mat-header-cell *matHeaderCellDef
+          i18n="product table header|Name of table header for price per product unit">Price</th>
         <td mat-cell *matCellDef="let product">
           ${{ product.price }}
         </td>
@@ -80,6 +84,8 @@
           <div class="acciones">
             <button mat-button mat-icon-button type="button"
               color="warn"
+              aria-label="Don't add this product"
+              i18n-aria-label="Label for action button to unmark a product for addition details of a sell"
               (click)="onClickDropProduct(i)">
               <mat-icon>remove</mat-icon>
             </button>
@@ -96,11 +102,9 @@
   <button mat-button mat-raised-button type="button"
     color="primary"
     [disabled]="isArrayEmpty$ | async"
-    [mat-dialog-close]="productsArray$ | async">
-    Aceptar
-  </button>
+    [mat-dialog-close]="productsArray$ | async"
+    i18n="confirm|Label for action button to accept and proceed">Confirm</button>
   <button mat-button mat-raised-button type="button"
-    [mat-dialog-close]="[]">
-    Cancelar
-  </button>
+    [mat-dialog-close]="[]"
+    i18n="cancel|Label for action button to cancel and/or stop an operation">Cancel</button>
 </div>
