--- a/src/app/management/routes/customers/customer-manager.component.html
+++ b/src/app/management/routes/customers/customer-manager.component.html
@@ -12,13 +12,15 @@
 
     <table mat-table class="full-width-min" [dataSource]="items$">
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> Nombre </th>
+        <th mat-header-cell *matHeaderCellDef
+          i18n="person name table header|Name of table header for full name of person">Name</th>
         <td mat-cell *matCellDef="let customer">
-          {{ customer.person.name }}
+          {{ customer.person.firstName }} {{ customer.person.lastName }}
         </td>
       </ng-container>
       <ng-container matColumnDef="idNumber">
-        <th mat-header-cell *matHeaderCellDef> Rut </th>
+        <th mat-header-cell *matHeaderCellDef
+          i18n="person id number table header|Name of table header for id number of person">Id Number</th>
         <td mat-cell *matCellDef="let customer">
           {{ customer.person.idNumber }}
         </td>
