--- a/src/app/management/routes/images/image-manager.component.html
+++ b/src/app/management/routes/images/image-manager.component.html
@@ -12,13 +12,15 @@
 
     <table mat-table class="full-width-min" [dataSource]="items$">
       <ng-container matColumnDef="thumb">
-        <th mat-header-cell *matHeaderCellDef> Imagen </th>
+        <th mat-header-cell *matHeaderCellDef
+          i18n="image preview table header|Name of table header for image preview">Image</th>
         <td mat-cell *matCellDef="let image">
           <img [src]="image.url" alt="">
         </td>
       </ng-container>
       <ng-container matColumnDef="filename">
-        <th mat-header-cell *matHeaderCellDef> Nombre de Archivo </th>
+        <th mat-header-cell *matHeaderCellDef
+          i18n="image filename table header|Name of table header for image filename">Filename</th>
         <td mat-cell *matCellDef="let image">
           {{ image.filename }}
         </td>
@@ -29,6 +31,8 @@
           <button mat-button mat-icon-button type="button"
             *ngIf="canDelete$ | async"
             color="warn"
+            aria-label="Delete"
+            i18n-aria-label="delete|Label for action button to delete an item"
             [disabled]="busy$ | async"
             (click)="onClickDelete(image)">
             <mat-icon>delete</mat-icon>
