--- a/src/app/management/routes/sales/sell-manager.component.html
+++ b/src/app/management/routes/sales/sell-manager.component.html
@@ -12,25 +12,29 @@
 
     <table mat-table class="full-width-min" [dataSource]="items$">
       <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef> No. </th>
+        <th mat-header-cell *matHeaderCellDef
+          i18n="sell buy order table header|Name of table header for buy order of sell">Buy order no.</th>
         <td mat-cell *matCellDef="let sell">
           {{ sell.buyOrder }}
         </td>
       </ng-container>
       <ng-container matColumnDef="date">
-        <th mat-header-cell *matHeaderCellDef> Fecha </th>
+        <th mat-header-cell *matHeaderCellDef
+          i18n="sell date and time table header|Name of table header for date and time of sell">Date and time</th>
         <td mat-cell *matCellDef="let sell">
           {{ sell.date }}
         </td>
       </ng-container>
       <ng-container matColumnDef="customerName">
-        <th mat-header-cell *matHeaderCellDef> Cliente </th>
+        <th mat-header-cell *matHeaderCellDef
+          i18n="sell customer name table header|Name of table header for name of customer of sell">Customer</th>
         <td mat-cell *matCellDef="let sell">
           {{ sell.customer.person.name }}
         </td>
       </ng-container>
       <ng-container matColumnDef="status">
-        <th mat-header-cell *matHeaderCellDef> Estado </th>
+        <th mat-header-cell *matHeaderCellDef
+          i18n="sell status table header|Name of table header for status of sell">Status</th>
         <td mat-cell *matCellDef="let sell">
           {{ sell.status }}
         </td>
@@ -41,6 +45,8 @@
             <button mat-button mat-icon-button type="button"
               *ngIf="canEdit$ | async"
               color="primary"
+              aria-label="Edit"
+              i18n-aria-label="edit|Label for action button to edit information of an item"
               [disabled]="busy$ | async"
               (click)="onClickEdit(sell)">
               <mat-icon>edit</mat-icon>
@@ -48,6 +54,8 @@
             <button mat-button mat-icon-button type="button"
               *ngIf="canDelete$ | async"
               color="warn"
+              aria-label="Delete"
+              i18n-aria-label="delete|Label for action button to delete an item"
               [disabled]="busy$ | async"
               (click)="onClickDelete(sell)">
               <mat-icon>delete</mat-icon>
