--- a/src/app/management/routes/users/user-manager.component.html
+++ b/src/app/management/routes/users/user-manager.component.html
@@ -12,13 +12,15 @@
 
     <table mat-table class="full-width-min" [dataSource]="items$">
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> Nombre de Usuario </th>
+        <th mat-header-cell *matHeaderCellDef
+          i18n="user name table header|Name of table header for user name">User name</th>
         <td mat-cell *matCellDef="let user">
           {{ user.name }}
         </td>
       </ng-container>
       <ng-container matColumnDef="role">
-        <th mat-header-cell *matHeaderCellDef> Rol </th>
+        <th mat-header-cell *matHeaderCellDef
+          i18n="user role table header|Name of table header for user role name">Role</th>
         <td mat-cell *matCellDef="let user">
           {{ user.role }}
         </td>
@@ -30,6 +32,8 @@
             <button mat-button mat-icon-button type="button"
               *ngIf="canEdit$ | async"
               color="primary"
+              aria-label="Edit"
+              i18n-aria-label="edit|Label for action button to edit information of an item"
               [disabled]="busy$ | async"
               (click)="onClickEdit(user)">
               <mat-icon>edit</mat-icon>
@@ -37,6 +41,8 @@
             <button mat-button mat-icon-button type="button"
               *ngIf="canDelete$ | async"
               color="warn"
+              aria-label="Delete"
+              i18n-aria-label="delete|Label for action button to delete an item"
               [disabled]="busy$ | async"
               (click)="onClickDelete(user)">
               <mat-icon>delete</mat-icon>
