--- a/src/app/shared/dialogs/edit-profile-form-dialog/edit-profile-form-dialog.component.html
+++ b/src/app/shared/dialogs/edit-profile-form-dialog/edit-profile-form-dialog.component.html
@@ -5,7 +5,7 @@
   https://opensource.org/licenses/MIT
 -->
 
-<h2 mat-dialog-title>Editar Perfil</h2>
+<h2 mat-dialog-title i18n="Title of dialog prompt for editing oneself's profile information">Edit Profile</h2>
 <app-centered-mat-spinner *ngIf="saving$ | async">
 </app-centered-mat-spinner>
 
