update marks for translation
reinforce opinionated i18n nomenclature
  - avoid duplicate translations unless context changes
  - rely more on descriptions than meanings
  - only use *literal* meanings that can provide different contexts
  - remove meanings with suffixes "message","table header","field" etc

--- a/src/app/management/components/header/management-header.component.html
+++ b/src/app/management/components/header/management-header.component.html
@@ -9,7 +9,7 @@
   class="toggle-sidenav action"
   color="warn"
   aria-label="Toggle sidebar"
-  i18n-aria-label="Label for action button to show/hide management navigation sidebar"
+  i18n-aria-label="toggle sidebar|Label for action button to show/hide sidebar"
   (click)="switchSidenavOpenState()">
   <mat-icon>menu</mat-icon>
 </button>
@@ -30,12 +30,12 @@
   <button mat-menu-item type="button"
     (click)="onClickEditProfile()">
     <mat-icon>edit</mat-icon>
-    <span i18n="Label for action button to prompt profile edit">Edit Profile</span>
+    <span i18n="edit profile|Label for action button to prompt profile edit">Edit profile</span>
   </button>
   <button mat-menu-item type="button"
     (click)="onClickLogout()">
     <mat-icon>exit_to_app</mat-icon>
-    <span i18n="Label for action button to log out">Log Out</span>
+    <span i18n="log out|Label for action button to log out">Log out</span>
   </button>
 </mat-menu>
 <button mat-button type="button"
