--- a/src/app/management/routes/products/product-manager.component.html
+++ b/src/app/management/routes/products/product-manager.component.html
@@ -13,21 +13,21 @@
     <table mat-table class="full-width-min" [dataSource]="items$">
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef
-          i18n="product name table header|Name of table header for name of product">Name</th>
+          i18n="product name|Name of table header for name of product">Name</th>
         <td mat-cell *matCellDef="let product">
           {{ product.name }}
         </td>
       </ng-container>
       <ng-container matColumnDef="barcode">
         <th mat-header-cell *matHeaderCellDef
-          i18n="product code table header|Name of table header for code of product">Code</th>
+          i18n="product code|Name of table header for code of product">Code</th>
         <td mat-cell *matCellDef="let product">
           {{ product.barcode }}
         </td>
       </ng-container>
       <ng-container matColumnDef="price">
         <th mat-header-cell *matHeaderCellDef
-          i18n="product price table header|Name of table header for price per product unit">Price</th>
+          i18n="Name of table header for price per product unit">Price</th>
         <td mat-cell *matCellDef="let product">
           ${{ product.price }}
         </td>
@@ -35,7 +35,7 @@
       <!-- <ng-container matColumnDef="currentStock">
         <th mat-header-cell *matHeaderCellDef> Stock Actual </th>
         <td mat-cell *matCellDef="let product"
-          i18n="product table header|Name of table header for price per product unit">
+          i18n="Name of table header for price per product unit">
           {{ product.currentStock }}
         </td>
       </ng-container>
@@ -47,7 +47,7 @@
       </ng-container> -->
       <ng-container matColumnDef="category">
         <th mat-header-cell *matHeaderCellDef
-          i18n="product category table header|Name of table header for category of product">Category</th>
+          i18n="Name of table header for category of product">Category</th>
         <td mat-cell *matCellDef="let product">
           {{ product.category.name }}
         </td>
