--- a/src/app/shared/components/address-form/address-form.component.html
+++ b/src/app/shared/components/address-form/address-form.component.html
@@ -18,8 +18,8 @@
   </mat-form-field>
   <mat-form-field class="firstLine">
     <input matInput formControlName="firstLine"
-      placeholder="Adress"
-      i18n-placeholder="Name of field for a given street's name and number" />
+      placeholder="Address"
+      i18n-placeholder="Name of field for address street name and number" />
   </mat-form-field>
   <mat-form-field class="secondLine">
     <input matInput formControlName="secondLine"
