--- a/src/app/shared/components/person-form/person-form.component.html
+++ b/src/app/shared/components/person-form/person-form.component.html
@@ -21,7 +21,7 @@
 
   <mat-form-field class="idNumber">
     <input matInput formControlName="idNumber"
-      placeholder="ID number"
+      placeholder="Id number"
       i18n-placeholder="Name of field for the identification number of a person" />
   </mat-form-field>
 
