--- a/src/app/shared/components/product-form/product-form.component.html
+++ b/src/app/shared/components/product-form/product-form.component.html
@@ -16,19 +16,19 @@
   <mat-form-field class="barcode">
     <input matInput formControlName="barcode"
       placeholder="Code"
-      i18n-placeholder="product code field|Name of field for product code" />
+      i18n-placeholder="Name of field for product code" />
   </mat-form-field>
 
   <mat-form-field class="name">
     <input matInput formControlName="name"
       placeholder="Name"
-      i18n-placeholder="product name field|Name of field for product name" />
+      i18n-placeholder="Name of field for product name" />
   </mat-form-field>
 
   <mat-form-field class="category">
     <mat-select formControlName="category"
       placeholder="Category"
-      i18n-placeholder="product category field|Name of field for product category">
+      i18n-placeholder="Name of field for product category">
       <mat-option *ngFor="let f of (categories$ | async)"
         [value]="f.code">{{ f.name }}</mat-option>
     </mat-select>
@@ -37,24 +37,24 @@
   <mat-form-field class="price">
     <input matInput formControlName="price"
       placeholder="Price"
-      i18n-placeholder="product price field|Name of field for product price" />
+      i18n-placeholder="Name of field for product price" />
   </mat-form-field>
 
   <!-- <mat-form-field class="stock">
     <input matInput formControlName="stock"
       placeholder="Current stock"
-      i18n-placeholder="product stock field|Name of field for product units currently held in stock" />
+      i18n-placeholder="Name of field for product units currently held in stock" />
   </mat-form-field> -->
 
   <!-- <mat-form-field class="cStock">
     <input matInput formControlName="criticalStock"
       placeholder="Low stock treshold"
-      i18n-placeholder="product low stock field|Name of field for lowest allowed product units treshold before raising alert of low stock" />
+      i18n-placeholder="Name of field for lowest allowed product units treshold before raising alert of low stock" />
   </mat-form-field> -->
 
   <mat-form-field class="desc">
     <textarea matInput formControlName="description"
       placeholder="Description"
-      i18n-placeholder="product description field|Name of field for product description"></textarea>
+      i18n-placeholder="Name of field for product description"></textarea>
   </mat-form-field>
 </form>
