--- a/src/app/shared/components/slideshow/slideshow.component.html
+++ b/src/app/shared/components/slideshow/slideshow.component.html
@@ -46,7 +46,7 @@
     <button type="button" class="slide-add"
       mat-button mat-icon-button
       aria-label="Add image"
-      i18n-aria-label="Label for action button to add a slide/image"
+      i18n-aria-label="add image|Label for action button to add a slide/image"
       (click)="onClickAdd()">
       <mat-icon>add_circle_outline</mat-icon>
     </button>
