--- a/src/app/shared/components/user-form/user-form.component.html
+++ b/src/app/shared/components/user-form/user-form.component.html
@@ -9,13 +9,13 @@
   <mat-form-field>
     <input matInput formControlName="name"
       placeholder="User name"
-      i18n-placeholder="Name of field for username to create user with" />
+      i18n-placeholder="Name of field for user name" />
   </mat-form-field>
 
   <mat-form-field>
     <input matInput formControlName="password" type="password"
       placeholder="Password"
-      i18n-placeholder="Name of field for password to create user with" />
+      i18n-placeholder="Name of field for user password" />
   </mat-form-field>
 
   <mat-form-field>
