--- a/src/app/management/dialogs/products-array/products-array-dialog.component.html
+++ b/src/app/management/dialogs/products-array/products-array-dialog.component.html
@@ -13,7 +13,7 @@
   <mat-expansion-panel [expanded]="true">
 
     <mat-expansion-panel-header
-      i18n="Title of widget displaying available products for addition to details of a sell">Available products</mat-expansion-panel-header>
+      i18n="Title of widget displaying available products for addition to details of a sell">Available Products</mat-expansion-panel-header>
 
     <app-product-filters-panel (filtersChanges)="onFiltersChange($event)">
     </app-product-filters-panel>
@@ -22,14 +22,14 @@
       <table mat-table [dataSource]="filteredProductsArray$">
         <ng-container matColumnDef="name">
           <th mat-header-cell *matHeaderCellDef
-            i18n="product name table header|Name of table header for name of product">Name</th>
+            i18n="product name|Name of table header for name of product">Name</th>
           <td mat-cell *matCellDef="let product">
             {{ product.name }}
           </td>
         </ng-container>
         <ng-container matColumnDef="price">
           <th mat-header-cell *matHeaderCellDef
-            i18n="product table header|Name of table header for price per product unit">Price</th>
+            i18n="Name of table header for price per product unit">Price</th>
           <td mat-cell *matCellDef="let product">
             ${{ product.price }}
           </td>
@@ -40,7 +40,7 @@
             <button mat-button mat-icon-button type="button"
               color="primary"
               aria-label="Add this product"
-              i18n-aria-label="Label for action button to mark a product for addition to details of a sell"
+              i18n-aria-label="add this product|Label for action button to mark a product for addition to details of a sell"
               (click)="onClickIncludeProduct(product)">
               <mat-icon>add</mat-icon>
             </button>
@@ -66,14 +66,14 @@
     <table mat-table [dataSource]="productsArray$">
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef
-          i18n="product name table header|Name of table header for name of product">Name</th>
+          i18n="product name|Name of table header for name of product">Name</th>
         <td mat-cell *matCellDef="let product">
           {{ product.name }}
         </td>
       </ng-container>
       <ng-container matColumnDef="price">
         <th mat-header-cell *matHeaderCellDef
-          i18n="product table header|Name of table header for price per product unit">Price</th>
+          i18n="Name of table header for price per product unit">Price</th>
         <td mat-cell *matCellDef="let product">
           ${{ product.price }}
         </td>
@@ -85,7 +85,7 @@
             <button mat-button mat-icon-button type="button"
               color="warn"
               aria-label="Don't add this product"
-              i18n-aria-label="Label for action button to unmark a product for addition details of a sell"
+              i18n-aria-label="dont add this product|Label for action button to unmark a product for addition details of a sell"
               (click)="onClickDropProduct(i)">
               <mat-icon>remove</mat-icon>
             </button>
