--- a/src/app/management/routes/images/image-manager.component.html
+++ b/src/app/management/routes/images/image-manager.component.html
@@ -13,14 +13,14 @@
     <table mat-table class="full-width-min" [dataSource]="items$">
       <ng-container matColumnDef="thumb">
         <th mat-header-cell *matHeaderCellDef
-          i18n="image preview table header|Name of table header for image preview">Image</th>
+          i18n="image|Name of table header for image preview">Image</th>
         <td mat-cell *matCellDef="let image">
           <img [src]="image.url" alt="">
         </td>
       </ng-container>
       <ng-container matColumnDef="filename">
         <th mat-header-cell *matHeaderCellDef
-          i18n="image filename table header|Name of table header for image filename">Filename</th>
+          i18n="image filename|Name of table header for image filename">Filename</th>
         <td mat-cell *matCellDef="let image">
           {{ image.filename }}
         </td>
