--- a/src/app/management/routes/salespeople/salesperson-manager.component.html
+++ b/src/app/management/routes/salespeople/salesperson-manager.component.html
@@ -13,14 +13,14 @@
     <table mat-table class="full-width-min" [dataSource]="items$">
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef
-          i18n="person name table header|Name of table header for full name of person">Name</th>
+          i18n="person full name|Name of table header for full name of person">Name</th>
         <td mat-cell *matCellDef="let salesperson">
           {{ salesperson.person.firstName }} {{ salesperson.person.lastName }}
         </td>
       </ng-container>
       <ng-container matColumnDef="idNumber">
         <th mat-header-cell *matHeaderCellDef
-          i18n="person id number table header|Name of table header for id number of person">Id Number</th>
+          i18n="person id number|Name of table header for id number of person">Id number</th>
         <td mat-cell *matCellDef="let salesperson">
           {{ salesperson.person.idNumber }}
         </td>
