--- a/src/app/management/routes/users/user-manager.component.html
+++ b/src/app/management/routes/users/user-manager.component.html
@@ -13,14 +13,14 @@
     <table mat-table class="full-width-min" [dataSource]="items$">
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef
-          i18n="user name table header|Name of table header for user name">User name</th>
+          i18n="Name of table header for user name">User name</th>
         <td mat-cell *matCellDef="let user">
           {{ user.name }}
         </td>
       </ng-container>
       <ng-container matColumnDef="role">
         <th mat-header-cell *matHeaderCellDef
-          i18n="user role table header|Name of table header for user role name">Role</th>
+          i18n="Name of table header for user role name">Role</th>
         <td mat-cell *matCellDef="let user">
           {{ user.role }}
         </td>
