--- a/src/app/shared/components/product-filters-panel/product-filters-panel.component.html
+++ b/src/app/shared/components/product-filters-panel/product-filters-panel.component.html
@@ -8,7 +8,7 @@
 <mat-expansion-panel>
   <mat-expansion-panel-header>
     <mat-panel-title
-      i18n="Title of panel to select conditions to filter products by">Filter products...</mat-panel-title>
+      i18n="Title of panel to select conditions to filter products by">Filter Products...</mat-panel-title>
   </mat-expansion-panel-header>
   <form [formGroup]="formGroup">
 
