--- a/src/app/shared/components/sell-form/sell-form.component.html
+++ b/src/app/shared/components/sell-form/sell-form.component.html
@@ -10,13 +10,13 @@
   <mat-form-field style="grid-area: date">
     <input matInput [ngModel]="sellDate" [ngModelOptions]="{ standalone: true }" disabled
       placeholder="Date and time"
-      i18n-placeholder="sell date field|Name of field for date and time of sell" />
+      i18n-placeholder="Name of field for date and time of sell" />
   </mat-form-field>
 
   <mat-form-field style="grid-area: billingType">
     <mat-select formControlName="billingType"
       placeholder="Billing type"
-      i18n-placeholder="sell billing type field|Name of field for billing type of sell">
+      i18n-placeholder="Name of field for billing type of sell">
       <mat-option *ngFor="let b of (billingTypes$ | async)"
         [value]="b.name">{{ b.name }}</mat-option>
     </mat-select>
@@ -25,7 +25,7 @@
   <mat-form-field style="grid-area: salesperson">
     <mat-select formControlName="salesperson"
       placeholder="Salesperson"
-      i18n-placeholder="sell salesperson field|Name of field for salesperson that earned/is in charge of sell">
+      i18n-placeholder="Name of field for salesperson that earned/is in charge of sell">
       <mat-option *ngFor="let e of (salespeople$ | async)"
         [value]="e.person.idNumber">{{
           e.person.firstName + ' ' + e.person.lastName
@@ -36,7 +36,7 @@
   <mat-form-field style="grid-area: customer">
     <mat-select formControlName="customer"
       placeholder="Customer"
-      i18n-placeholder="sell customer field|Name of field for purchasing customer in sell ">
+      i18n-placeholder="Name of field for purchasing customer in sell ">
       <mat-option *ngFor="let c of (customers$ | async)"
         [value]="c.person.idNumber">{{
           c.person.firstName + " " + c.person.lastName
@@ -46,31 +46,31 @@
 
   <mat-card style="grid-area: details">
     <div class="details-header">
-      <h3 i18n="Title of table displaying products and details of sell">Checkout details</h3>
+      <h3 i18n="Title of table displaying products and details of sell">Checkout Details</h3>
       <button mat-button mat-raised-button type="button"
         color="primary"
         (click)="onClickAddProducts()"
-        i18n="Label for action button to include products into sell">Add</button>
+        i18n="add products|Label for action button to include products into sell">Add</button>
     </div>
     <div class="details-table-wrapper">
       <table mat-table [dataSource]="sellDetails$">
         <ng-container matColumnDef="product">
           <th mat-header-cell *matHeaderCellDef
-            i18n="product name table header|Name of table header for name of product">Name</th>
+            i18n="product name|Name of table header for name of product">Name</th>
           <td mat-cell *matCellDef="let detail">
             {{ detail.product.name }}
           </td>
         </ng-container>
         <ng-container matColumnDef="price">
           <th mat-header-cell *matHeaderCellDef
-            i18n="product table header|Name of table header for price per product unit">Price</th>
+            i18n="Name of table header for price per product unit">Price</th>
           <td mat-cell *matCellDef="let detail">
             ${{ detail.product.price }}
           </td>
         </ng-container>
         <ng-container matColumnDef="quantity">
           <th mat-header-cell *matHeaderCellDef
-            i18n="product units table header|Name of table header for quantity of products (in units)">Units</th>
+            i18n="Name of table header for quantity of products (in units)">Units</th>
           <td mat-cell *matCellDef="let detail; let i=index">
             <button mat-button mat-icon-button type="button"
               aria-label="Add one"
