--- a/src/app/shared/dialogs/images-array/images-array-dialog.component.html
+++ b/src/app/shared/dialogs/images-array/images-array-dialog.component.html
@@ -5,7 +5,7 @@
   https://opensource.org/licenses/MIT
 -->
 
-<h2 i18n="Title of dialog to associate images to a product">Associate images</h2>
+<h2 i18n="Title of dialog to associate images to a product">Associate Images</h2>
 <mat-form-field class="search" appearance="fill">
   <mat-label i18n="Name of field for filtering all stored images by keyword">Search by keyword</mat-label>
   <input matInput type="text" [formControl]="filterFormControl" />
