--- a/src/app/store/components/billing-details-form/store-billing-details-form.component.html
+++ b/src/app/store/components/billing-details-form/store-billing-details-form.component.html
@@ -17,6 +17,6 @@
   </app-company-form>
   <app-addresses-editor-form #addressForm formControlName="address"
     placeholder="Billing address"
-    i18n-placeholder="Name of field for selecting a billing address">
+    i18n-placeholder="Name of field for address to bill to">
   </app-addresses-editor-form>
 </form>
