--- a/src/app/store/components/cart-contents-table/store-cart-contents-table.component.html
+++ b/src/app/store/components/cart-contents-table/store-cart-contents-table.component.html
@@ -8,7 +8,7 @@
 <table mat-table [dataSource]="details$">
   <ng-container matColumnDef="product">
     <th mat-header-cell *matHeaderCellDef>
-      <span i18n="product name table header|Name of table header for name of product">Name</span>
+      <span i18n="product|Name of table header for name and code of product">Product</span>
     </th>
     <td mat-cell *matCellDef="let detail">
       <span class="name">{{ detail.product.name }}</span><br/>
@@ -17,7 +17,7 @@
   </ng-container>
   <ng-container matColumnDef="price">
     <th mat-header-cell *matHeaderCellDef class="center">
-      <span i18n="product table header|Name of table header for price per product unit">Price</span>
+      <span i18n="Name of table header for price per product unit">Price</span>
     </th>
     <td mat-cell *matCellDef="let detail" class="center">
       <span>${{ detail.product.price }}</span>
@@ -25,7 +25,7 @@
   </ng-container>
   <ng-container matColumnDef="quantity">
     <th mat-header-cell *matHeaderCellDef class="center"
-      i18n="product units table header|Name of table header for product units in cart">Units</th>
+      i18n="Name of table header for product units in cart">Units</th>
     <td mat-cell *matCellDef="let detail; let i = index" class="center">
       <button type="button" class="decrease"
         mat-button mat-icon-button
@@ -47,7 +47,7 @@
   </ng-container>
   <ng-container matColumnDef="total">
     <th mat-header-cell *matHeaderCellDef>
-      <span i18n="product subtotal table header|Name of table header for the value of product price x units in cart">Subtotal</span>
+      <span i18n="Name of table header for the value of product price x units in cart">Subtotal</span>
     </th>
     <td mat-cell *matCellDef="let detail">
       <span>${{ detail.product.price * detail.units }}</span>
