--- a/src/app/store/components/checkout-request-form/store-checkout-request-form.component.html
+++ b/src/app/store/components/checkout-request-form/store-checkout-request-form.component.html
@@ -7,17 +7,17 @@
 
 <form [formGroup]="formGroup">
   <div class="billing">
-    <h3 i18n="Title of form for billing information">Billing details</h3>
+    <h3 i18n="Title of form for billing information">Billing Details</h3>
     <app-store-billing-details-form #billingForm formControlName="billing">
     </app-store-billing-details-form>
   </div>
   <div class="customer">
-    <h3 i18n="Title of form for personal information">Personal information</h3>
+    <h3 i18n="Title of form for personal information">Personal Information</h3>
     <app-person-form #customerForm formControlName="customer">
     </app-person-form>
   </div>
   <div class="shipping">
-    <h3 i18n="Title of form for shipping information">Shipping details</h3>
+    <h3 i18n="Title of form for shipping information">Shipping Details</h3>
     <app-store-shipping-form #shippingForm formControlName="shipping">
     </app-store-shipping-form>
   </div>
