--- a/src/app/management/components/data-actions/management-data-actions.component.html
+++ b/src/app/management/components/data-actions/management-data-actions.component.html
@@ -7,6 +7,5 @@
 
 <button mat-button mat-raised-button
   color="primary"
-  (click)="onClickAdd()">
-  Agregar
-</button>
+  (click)="onClickAdd()"
+  i18n="create new item|Label for action button to create an item">New item</button>
