--- a/src/app/shared/dialogs/input-dialog/input-dialog.component.css
+++ b/src/app/shared/dialogs/input-dialog/input-dialog.component.css
@@ -5,9 +5,15 @@
  * https://opensource.org/licenses/MIT
  */
 
-export class ProductCategory {
-  code: number;
-  name: string;
-  parent?: Partial<ProductCategory>;
-  children?: ProductCategory[];
+h2 {
+  text-align: center;
+}
+
+mat-form-field {
+  width: 100%;
+}
+
+.actions {
+  display: flex;
+  justify-content: center;
 }
