use new components in product form

--- a/src/app/shared/components/product-form/product-form.component.css
+++ b/src/app/shared/components/product-form/product-form.component.css
@@ -21,11 +21,8 @@ form {
   .name {
     grid-area: name;
   }
-  .family {
-    grid-area: family;
-  }
-  .type {
-    grid-area: type;
+  .category {
+    grid-area: category;
   }
   .price {
     grid-area: price;
