--- a/src/app/shared/components/cart-product-units-control/cart-product-units-control.component.css
+++ b/src/app/shared/components/cart-product-units-control/cart-product-units-control.component.css
@@ -5,7 +5,7 @@
  * https://opensource.org/licenses/MIT
  */
 
-.product-units-control,
+:host,
 .quantity-wrapper {
   display: grid;
   gap: 0.5rem;
