--- a/src/app/shared/components/product-category-form/product-category-form.component.html
+++ b/src/app/shared/components/product-category-form/product-category-form.component.html
@@ -19,9 +19,9 @@
       i18n-placeholder="Name of field for the name of a category" />
   </mat-form-field>
 
-  <mat-form-field class="parent">
-    <input matInput formControlName="parent"
-      placeholder="Parent"
-      i18n-placeholder="Name of field that references the containing parent of a category" />
-  </mat-form-field>
+  <app-product-category-selector-form-field class="parent"
+    formControlName="parent"
+    placeholder="Parent"
+    i18n-placeholder="Name of field that references the containing parent of a category">
+  </app-product-category-selector-form-field>
 </form>
