--- a/src/app/management/routes/images/management-images.component.html
+++ b/src/app/management/routes/images/management-images.component.html
@@ -10,7 +10,7 @@
 <div class="data-manager" [hidden]="loading$ | async">
   <div class="table-wrapper">
 
-    <table mat-table class="full-width-min" [dataSource]="items$">
+    <table mat-table [dataSource]="items$">
       <ng-container matColumnDef="thumb">
         <th mat-header-cell *matHeaderCellDef
           i18n="image|Name of table header for image preview">Image</th>
