--- a/src/app/management/routes/sales/management-sales.component.html
+++ b/src/app/management/routes/sales/management-sales.component.html
@@ -10,7 +10,7 @@
 <div class="data-manager" [hidden]="loading$ | async">
   <div class="table-wrapper">
 
-    <table mat-table class="full-width-min" [dataSource]="items$">
+    <table mat-table [dataSource]="items$">
       <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef
           i18n="Name of table header for buy order of sell">Buy order no.</th>
