feat: use of material paginator in tables

--- a/src/app/management/routes/customers/management-customers.component.html
+++ b/src/app/management/routes/customers/management-customers.component.html
@@ -31,4 +31,14 @@
     </table>
 
   </div>
+  <div>
+
+    <mat-paginator
+      (page)="onPage($event)"
+      [showFirstLastButtons]="true"
+      [pageSizeOptions]="pageSizeOptions"
+      [length]="totalCount$ | async">
+    </mat-paginator>
+
+  </div>
 </div>
