--- a/src/app/management/routes/users/management-users.component.html
+++ b/src/app/management/routes/users/management-users.component.html
@@ -52,10 +52,20 @@
       <tr mat-header-row *matHeaderRowDef="tableColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: tableColumns;"></tr>
     </table>
-  </div>
 
-  <app-management-data-actions
-    *ngIf="canAdd$ | async"
-    (add)="onClickAdd()">
-  </app-management-data-actions>
+  </div>
+  <div>
+
+    <app-management-data-actions
+      *ngIf="canAdd$ | async"
+      (add)="onClickAdd()">
+    </app-management-data-actions>
+    <mat-paginator
+      (page)="onPage($event)"
+      [showFirstLastButtons]="true"
+      [pageSizeOptions]="pageSizeOptions"
+      [length]="totalCount$ | async">
+    </mat-paginator>
+
+  </div>
 </div>
