--- a/src/app/management/routes/sales/management-sales.component.html
+++ b/src/app/management/routes/sales/management-sales.component.html
@@ -29,7 +29,7 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header
           i18n="customer|Name of table header for name of customer">Customer</th>
         <td mat-cell *matCellDef="let sell">
-          {{ sell.customer.person.name }}
+          {{ sell.customer.person.firstName }} {{ sell.customer.person.lastName }}
         </td>
       </ng-container>
       <ng-container matColumnDef="status">
