--- a/src/app/management/routes/sales/management-sales.component.html
+++ b/src/app/management/routes/sales/management-sales.component.html
@@ -11,7 +11,7 @@
   <div class="table-wrapper">
 
     <table mat-table [dataSource]="items$" matSort (matSortChange)="onSortChange($event)">
-      <ng-container matColumnDef="id">
+      <ng-container matColumnDef="buyOrder">
         <th mat-header-cell *matHeaderCellDef mat-sort-header
           i18n="Name of table header for buy order of sell">Buy order no.</th>
         <td mat-cell *matCellDef="let sell">
@@ -25,7 +25,7 @@
           {{ sell.date }}
         </td>
       </ng-container>
-      <ng-container matColumnDef="customerName">
+      <ng-container matColumnDef="customer">
         <th mat-header-cell *matHeaderCellDef mat-sort-header
           i18n="customer|Name of table header for name of customer">Customer</th>
         <td mat-cell *matCellDef="let sell">
